--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.1"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "Safari >= 9"
+  ]
 }
